apps/server/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: chorro
    component: server
  name: chorro-server-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: chorro
    component: server
